<resources>
    <string name="app_name">Investagrams Exam</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="more_info">More Info</string>
    <string name="search">Search</string>
    <string name="_10">/10</string>
    <string name="reviews">Reviews</string>
    <string name="trending_movies">Trending Movies</string>
    <string name="watchlist">Watchlist</string>
    <string name="sign_out">Sign out</string>
</resources>
