<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_menu_group_1"
        android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/drawer_item_trending"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/trending_movies"/>
        <item
            android:id="@+id/drawer_item_watchlist"
            android:icon="@drawable/ic_watch_later_black_24dp"
            android:title="@string/watchlist"/>
    </group>

    <group
        android:id="@+id/nav_menu_group_2"
        android:checkableBehavior="none">

        <item
            android:id="@+id/drawer_item_logout"
            android:title="@string/sign_out" >
        </item>
    </group>
</menu>